refactor: introduce Step interface